z-index fixes

--- a/mn1.css
+++ b/mn1.css
@@ -194,7 +194,7 @@ label.col-form-label {
 
 .container-header {
     position: relative;
-    z-index: 1;
+    
 }
 
 #welcome-info #user-text-info span {
